resources/definitions/deployment-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx

spec:
  template:
    metadata:
      name: nginx-pods
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.16
  strategy:
    type: RollingUpdate

  replicas: 1
  selector:
    matchLabels:
      app: nginx
