resources/definitions/pod-simple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
