resources/definitions/pod-with-nodeaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
  - name: data-processor
    image: data-processor
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution: # or preferredDuringSchedulingIgnoredDuringExecution, or requiredDuringSchedulingRequiredDuringExecution
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In # In, NotIn, Exists
            values:
            - Large
            - Medium

# To say pod can do on Large or medium labelled nodes, then change to:

#          - key: size
#            operator: In
#            values:
#            - Large
#            - Medium

# operators:

# - In
# - NotIn
# - Exists (checks if key exists and doesn't check the values)
# - (there are more)

# If NodeAffinity cannot make a match based on the expression
# requiredDuringSchedulingIgnoredDuringExecution: controls what happens

# Available:
# - requiredDuringSchedulingIgnoredDuringExecution:
# - preferredDuringSchedulingIgnoredDuringExecution:

# Planned:
# - requiredDuringSchedulingRequiredDuringExecution:
