resources/definitions/pod-with-persistentvolumeclaim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp-pod
spec:
  volumes:
  - name: use-pv-storage
    persistentVolumeClaim:
          claimName: my-pvc
  containers:
    - name: nginx-container
      image: nginx
      volumeMounts:
        mountPath: "/data"
        name: use-pv-storage
