resources/definitions/pod-with-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name; web-pod
spec:
  securityContext:
    runAsUser: 1000
    capabilities:
      add: ["SYS_TIME"]
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "3600"]
