resources/definitions/pod-with-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-1401
  namespace: admin1401
  labels:
    app: secret
spec:
  containers:
    - name: secret-admin
      image: busybox
      command: ["sleep"]
      args: ["4800"]
      volumeMounts:
      - name: secret-volume
        mountPath: /etc/secret-volume
        readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfile-secret

# emptyDir example
#
# volumes:
# - name: redis-volume
#   emptyDir: {}
